# bluesky

./: .gitignore  .project  .readthedocs.yaml  BlueSky-pygame.py  BlueSky-qtgl.py  BlueSky.py  BlueSky_pygame.py  BlueSky_qtgl.py  HOWTO.md  Julia_001.scn  LICENSE  MANIFEST.in  Makefile  README.md  TODO.md  __main__.py  bluesky.py  check.py  comm_data_types.rtf  csv_utils.py  dictargs.py  environment.yml  hatch_build.py  install-required-modules-windows-run-as-administrator.bat  json_utils.py  orchestrator.py  output2016-10-27-11-54-18-BlueSky-Metrics.txt  pylintrc  pyproject.toml  readperformance.py  requirements-gui.txt  requirements.txt  run-a-scenario-on-windows-from-commandline.bat  run-client-on-windows.bat  run-headless-on-windows.bat  settings.cfg  setup-python.bat  setup-python.errors.then.readme.txt  setup.cfg  setup.py  (+8 more)
.github/workflows/: build-wheels.yml  docs.yml  python-package.yml  python-publish.yml  python-test.yml
bluesky/: TESTDLG.py  __init__.py  __main__.py  cmdargs.py  pathfinder.py  refdata.py  resourcepath.py  settings.py
bluesky/core/: __init__.py  actdata.py  base.py  entity.py  funcobject.py  plugin.py  remotestore.py  replaceable.py  signal.py  simtime.py  timedfunction.py  trafficarrays.py  trafficproxy.py  varexplorer.py  walltime.py
bluesky/io/: __init__.py  client.py  iodata.py  iomanager.py  node.py  server.py
bluesky/manager/: __init__.py  client.py  main.py  node.py  timer.py
bluesky/navdatabase/: __init__.py  load_navdata_txt.py  load_visuals_txt.py  loadnavdata.py  loadnavdata_txt.py  navdatabase.py
bluesky/navdb/: __init__.py  load_navdata_txt.py  load_visuals_txt.py  loaddata.py  loadnavdata.py  navdatabase.py  navdb.py  navdb.py.bak
bluesky/network/: __init__.py  client.py  common.py  context.py  detached.py  discovery.py  node.py  node_mt.py  npcodec.py  publisher.py  server.py  sharedstate.py  subscriber.py  subscription.py  udplib.py
bluesky/notes/: notes.txt
bluesky/plugins/: adsbfeed.py  airspace_loader.py  area.py  geofence.py  geovector.py  guiexample.py  metrics.py  mlcontrol.py  opensky.py  optimize.py  qtexample.py  sectorcount.py  stackcheck.py  synthetic.py  trafgen.py  windecmwf.py  windgfs.py
bluesky/resources/: default.cfg
bluesky/sim/: __init__.py  simulation.py
bluesky/simulation/: __init__.py  screenio.py  simulation.py
bluesky/stack/: __init__.py  argparser.py  asascmd.py  basecmds.py  clientstack.py  cmdparser.py  command.py  freeflight.py  importer.py  log.py  parser.py  recorder.py  simstack.py  stack.py  stack.py.bak  stackbase.py  synthetic.py
bluesky/test/: __init__.py  conftest.py
bluesky/tools/: Functions.py  SQL_Connector.py  __init__.py  adsb.py  adsb_datafeed.py  adsb_decoder.py  aero.py  aero_np.py  areafilter.py  cachefile.py  calculator.py  datafeed.py  datalog.py  declination_sealevel.csv  dialog.py  dynamicarrays.py  fastfont.py  fwparser.py  geo.py  init_terrain.py  load_navdata_txt.py  load_visuals_txt.py  loaddata.py  misc.py  network.py  openaip.py  performance.py  plotter.py  plugin.py  position.py  qdr.py  replaceable.py  shapes.py  signal.py  simtime.py  splash.py  splitarg.py  terrain_and_skyline.py  timer.py  trafficarrays.py  (+2 more)
bluesky/traf/: __init__.py  activewpdata.py  adsbmodel.py  area.py  asas.py  autopilot.py  bada_coeff.py  flst.py  fms.py  metric.py  navdb.py  params.py  perf.py  perfbada.py  perfbase.py  performance.py  pilot.py  position.py  route.py  traffic.py  trails.py  turbulence.py  waypoint.py  windfield.py  windsim.py
bluesky/traffic/: __init__.py  activewpdata.py  adsbmodel.py  aporasas.py  autopilot.py  conditional.py  metric.py  pilot.py  route.py  traffic.py  trafficgroups.py  trafficproxy.py  trails.py  turbulence.py  windfield.py  windsim.py
bluesky/ui/: __init__.py  console.py  display.py  keyboard.py  loadvisuals.py  loadvisuals_txt.py  menu.py  palette.py  polytools.py  radarclick.py  (+1 more)
data/: default.cfg
docs/: .gitignore  BLUESKY-COMMAND-TABLE.TXT  BLUESKY-COMMAND-TABLE.xlsx  BlueSky_Command_Reference.doc  Makefile  Re Qt-events.txt  Routes and FMS Guidance in BlueSky.docx  bluesky.core.rst  bluesky.rst  bluesky.sim.rst  bluesky.stack.rst  bluesky.stream.rst  bluesky.tools.rst  bluesky.traf.rst  bluesky.ui.rst  citation.md  conf.py  contributing.md  index.md  index.rst  installation.md  legacy-docs.md  make.bat  modules.rst  plugin_template.py  python_demo.ipynb  quickstart.md  requirements.txt
info/: BLUESKY-COMMAND-TABLE.TXT  BLUESKY-COMMAND-TABLE.xlsx  BlueSky-QTGL_Supported_Systems.txt  Command Reference.doc  Re Qt-events.txt  TMX Reference Manual.doc  TMX User Manual.doc
packaging/bluesky-guidata/: README.md  pyproject.toml
packaging/bluesky-navdata/: README.md  pyproject.toml
plugins/: NinoPlugin.py  adsb_decoder.py  adsbfeed.py  area.py  clientexample.py  dftraffarray.py  dronetraf.py  dronetraffic.py  example.py  flstlog.py  geofence.py  geovector.py  guiexample.py  ilsgate.py  importer_example.py  metrics.py  mlcontrol.py  opensky.py  sectorcount.py  simexample.py  simgen.py  stackcheck.py  tafsimgen.py  terrain_and_skyline.py  trafgen.py  trafgenclasses.py  usepe_logger.py  usepe_plugin.py  windecmwf.py  windgfs.py
scenario/: 0-COND-TEST.SCN  0-LNAV-WIND.scn  0-TST_DEL_AC.SCN  0-TST_FMS_ALT.SCN  0-Takeoff.SCN  0-VNAV-Fullflight.SCN  0-VNAV-Landing.SCN  0-VNAV-Testscenario.SCN  0-demo-scenario.scn  00-example_commands.scn  00.scn  001.scn  0_BLUESKY_flight.scn  10.scn  1000.scn  8.SCN  9.SCN  ASAS-01.scn  ASAS-02.scn  ASAS-03.scn  ASAS-04.scn  ASAS-05.scn  ASAS-06.scn  ASAS-07.scn  ASAS-08.scn  ASAS-09.scn  ASAS-SUPER4.scn  ASAS-SUPER8-WIND.scn  ASAS-SUPER8.scn  ASAS-WALL-WIND.scn  ASAS-WALL.scn  CIRCLE12.SCN  DEMO-SUPER8 .scn  DEMO-WALL .scn  EHAM-TAXI.SCN  EHEH_SID.SCN  EmanTest.scn  ExtremesTest18R 2 2_20Deg.scn  FIR_1803.scn  FM_126ac_CR_OFF_1.scn  (+144 more)
testje/: blabla.txt
utils/: gltest.py
(+2552 files in other folders)
