[project]
name = "bluesky-guidata"
version = "1.0.0"

authors = [
  { name="Joost Ellerbroek", email="j.ellerbroek@tudelft.nl" },
  { name="Jacco Hoekstra", email="j.m.hoekstra@tudelft.nl" }
]

description = "Resources for the BlueSky Open ATM Simulator GUI"
readme = "../../README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",

    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",

    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",

    "Operating System :: OS Independent",
]
keywords = ['ATM', 'transport', 'simulation', 'aviation', 'aircraft']

[project.urls]
Homepage = "https://github.com/TUDelft-CNS-ATM/bluesky"
Issues = "https://github.com/TUDelft-CNS-ATM/bluesky/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist.force-include]
"../../bluesky/resources/graphics" = "bluesky/resources/graphics"
"../../bluesky/resources/html" = "bluesky/resources/html"
